--- a/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
+++ b/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
@@ -4,9 +4,50 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# RL Controller Simulation Demo\n",
+        "# Controlling Butyrate Productions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here we illustrate a simulation using the general RL controller environment.\n",
         "\n",
-        "This notebook runs a simulation using the general RL controller environment and renders plots one at a time (separate cells for performance, actions, and kinetics).\n"
+        "First, we need to setup the environment.\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### **Setup the environment**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Replace `DG_ROOT = (`...`) with the path to the folder where the GitHub repository was cloned: '/home/shared/<user_name>/AiSchool/content/DanielGarza'\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Ensure local src is importable (assumes this notebook lives in content/DanielGarza/notebooks)\n",
+        "import sys\n",
+        "DG_ROOT = Path('..')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### **Import the necessary packages and set the style for the Figures**"
       ]
     },
     {
@@ -18,13 +59,8 @@
         "# Setup imports and configuration\n",
         "from pathlib import Path\n",
         "import numpy as np\n",
+        "import yaml, json\n",
         "\n",
-        "# Ensure local src is importable (assumes this notebook lives in content/DanielGarza/notebooks)\n",
-        "import sys\n",
-        "DG_ROOT = Path('..')\n",
-        "SRC_PATH = DG_ROOT / 'src'\n",
-        "if str(SRC_PATH) not in sys.path:\n",
-        "    sys.path.insert(0, str(SRC_PATH))\n",
         "\n",
         "from rl.env import GeneralMicrobiomeEnv\n",
         "from rl.config import TopLevelConfig\n",
@@ -55,6 +91,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### **Load the configuration files**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -65,24 +108,19 @@
         "CONFIG_PATH = SRC_PATH / 'rl' / 'examples' / 'configs' / 'butyrate_control.yaml'\n",
         "# Provide a model path only if you set USE_RANDOM_ACTIONS=False\n",
         "POLICY_PATH = SRC_PATH / 'rl' / 'examples' / 'models' / 'example_policy.zip'\n",
-        "HOURS = 100.0\n",
+        "HOURS = 500.0\n",
         "DET = True\n",
-        "SEED = 123\n",
+        "SEED = 666\n",
         "USE_RANDOM_ACTIONS = True  # set False to load a trained model at POLICY_PATH\n",
         "\n",
         "# Load config\n",
-        "if CONFIG_PATH is None:\n",
-        "    cfg = TopLevelConfig()\n",
-        "else:\n",
-        "    import yaml, json\n",
-        "    text = Path(CONFIG_PATH).read_text()\n",
-        "    try:\n",
-        "        cfg = TopLevelConfig(**yaml.safe_load(text))\n",
-        "    except Exception:\n",
-        "        cfg = TopLevelConfig(**json.loads(text))\n",
+        "text = Path(CONFIG_PATH).read_text()\n",
+        "cfg = TopLevelConfig(**yaml.safe_load(text))\n",
+        "\n",
         "\n",
         "# Ensure horizon covers requested hours\n",
         "n_steps_needed = int(max(1, np.ceil(float(HOURS) / float(cfg.episode.dt_hours))))\n",
+        "\n",
         "try:\n",
         "    if cfg.episode.horizon < n_steps_needed:\n",
         "        cfg.episode.horizon = int(n_steps_needed)\n",
@@ -96,17 +134,24 @@
         "# Load model (optional)\n",
         "model = None\n",
         "if not USE_RANDOM_ACTIONS:\n",
-        "    from stable_baselines3 import SAC, PPO\n",
-        "    if POLICY_PATH.suffix.lower() == '.zip' and POLICY_PATH.exists():\n",
-        "        # Try PPO first, fallback to SAC\n",
-        "        try:\n",
-        "            model = PPO.load(str(POLICY_PATH), device='auto')\n",
-        "        except Exception:\n",
-        "            model = SAC.load(str(POLICY_PATH), device='auto')\n",
-        "    else:\n",
-        "        raise FileNotFoundError(f\"POLICY_PATH not found: {POLICY_PATH}\")\n",
-        "\n",
-        "# Collect one rollout worth of data\n",
+        "    model = PPO.load(str(POLICY_PATH), device='auto')\n",
+        "    \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### **Collect data**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "obs, info = env_wrapped.reset(seed=SEED)\n",
         "include_pH = env_base._pH_mode in ('switchable', 'controlled')\n",
         "\n",
@@ -158,7 +203,14 @@
         "reward = np.array(reward, dtype=np.float32)\n",
         "cum_reward = np.array(cum_reward, dtype=np.float32)\n",
         "pH_used = np.array(pH_used, dtype=np.float32)\n",
-        "target_vals = np.array(target_vals, dtype=np.float32)\n"
+        "target_vals = np.array(target_vals, dtype=np.float32)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### **Plot performance**"
       ]
     },
     {
@@ -183,6 +235,13 @@
         "fig.tight_layout()\n",
         "plt.close(fig)\n",
         "fig\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### **Plot actions**"
       ]
     },
     {
@@ -217,6 +276,13 @@
         "fig.tight_layout()\n",
         "plt.close(fig)\n",
         "fig\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### **Simulate and plot kinetics**"
       ]
     },
     {
