--- a/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
+++ b/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
@@ -11,10 +11,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Here we illustrate a simulation using the general RL controller environment.\n",
+        "Here, we illustrate a simulation using the general RL controller environment.\n",
         "\n",
-        "First, we need to setup the environment.\n",
         "\n",
+        "First, we set up the environment.\n",
         "\n"
       ]
     },
@@ -29,14 +29,26 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Replace `DG_ROOT = (`...`) with the path to the folder where the GitHub repository was cloned: '/home/shared/<user_name>/AiSchool/content/DanielGarza'\n"
+        "Replace `DG_ROOT = ('...')` with the path to the folder where the GitHub repository was cloned: '/home/shared/<user_name>/AiSchool/content/DanielGarza'\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'Path' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Ensure local src is importable (assumes this notebook lives in content/DanielGarza/notebooks)\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m DG_ROOT \u001b[38;5;241m=\u001b[39m \u001b[43mPath\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'Path' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Ensure local src is importable (assumes this notebook lives in content/DanielGarza/notebooks)\n",
         "import sys\n",
@@ -143,7 +155,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### **Collect data**"
+        "#### **Collect data by running an episode**"
       ]
     },
     {
@@ -393,8 +405,22 @@
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
