--- a/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
+++ b/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
@@ -29,26 +29,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Replace `DG_ROOT = ('...')` with the path to the folder where the GitHub repository was cloned: '/home/shared/<user_name>/AiSchool/content/DanielGarza'\n"
+        "Replace `DG_ROOT = ('...')` with the path to the folder where the GitHub repository was cloned: \"/home/shared/ <user_name> /AiSchool/content/DanielGarza\"\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'Path' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Ensure local src is importable (assumes this notebook lives in content/DanielGarza/notebooks)\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m DG_ROOT \u001b[38;5;241m=\u001b[39m \u001b[43mPath\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'Path' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Ensure local src is importable (assumes this notebook lives in content/DanielGarza/notebooks)\n",
         "import sys\n",
