--- a/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
+++ b/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Replace `DG_ROOT = ('...')` with the path to the folder where the GitHub repository was cloned: \"/home/shared/ <user_name> /AiSchool/content/DanielGarza\"\n"
+        "Replace `DG_ROOT = ('...')` with the path to the folder where the GitHub repository was cloned: \"/home/shared/ **user_name** /AiSchool/content/DanielGarza\"\n"
       ]
     },
     {
