--- a/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
+++ b/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
@@ -103,6 +103,7 @@
       "outputs": [],
       "source": [
         "# Configure model, config, and runtime (assumes working under content/DanielGarza)\n",
+        "SRC_PATH = DG_ROOT / 'src'\n",
         "MODEL_JSON = DG_ROOT / 'modelTemplates' / 'bh_bt_ri_complete_model_export.json'\n",
         "CONFIG_PATH = SRC_PATH / 'rl' / 'examples' / 'configs' / 'butyrate_control.yaml'\n",
         "# Provide a model path only if you set USE_RANDOM_ACTIONS=False\n",
