--- a/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
+++ b/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Replace `DG_ROOT = ('...')` with the path to the folder where the GitHub repository was cloned: \"/home/shared/ **user_name** /AiSchool/content/DanielGarza\"\n"
+        "Replace `DG_ROOT = ('...')` with the path to the folder where the GitHub repository was cloned: \"/shared/home/ **user_name** /AiSchool/content/DanielGarza\"\n"
       ]
     },
     {
@@ -63,8 +63,9 @@
         "\n",
         "from rl.env import GeneralMicrobiomeEnv\n",
         "from rl.config import TopLevelConfig\n",
-        "from rl.wrappers import apply_observation_pipeline\n",
+        "from rl.wrappers import apply_observation_pipeline, ObservationNormalizationWrapper\n",
         "from rl.model_adapter import ModelAdapter, AdapterSettings\n",
+        "from stable_baselines3 import PPO\n",
         "\n",
         "# Matplotlib for static plots\n",
         "import matplotlib.pyplot as plt\n",
@@ -93,7 +94,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### **Load the configuration files**"
+        "#### **Load the configuration files**\n",
+        "\n",
+        "Optionally set `NORM_STATS_PATH` to a normalization stats JSON (from training). If left as `None`, the notebook will auto-detect a file named like the policy with `_normalization_stats.json` appended, and load it into the observation normalization wrapper when `USE_RANDOM_ACTIONS = False`."
       ]
     },
     {
@@ -108,6 +111,8 @@
         "CONFIG_PATH = SRC_PATH / 'rl' / 'examples' / 'configs' / 'butyrate_control.yaml'\n",
         "# Provide a model path only if you set USE_RANDOM_ACTIONS=False\n",
         "POLICY_PATH = SRC_PATH / 'rl' / 'examples' / 'models' / 'example_policy.zip'\n",
+        "# Optional: path to observation normalization stats JSON. If None, auto-detect next to POLICY_PATH.\n",
+        "NORM_STATS_PATH = None  # e.g., DG_ROOT / 'trained_models' / 'mg_rl_general_ppo' / 'butyrate' / 'ppo' / '1_ckpt_2320000_normalization_stats.json'\n",
         "HOURS = 500.0\n",
         "DET = True\n",
         "SEED = 666\n",
@@ -127,15 +132,48 @@
         "except Exception:\n",
         "    pass\n",
         "\n",
+        "# Helper: try to load observation normalization stats into wrappers\n",
+        "from pathlib import Path as _PathAlias\n",
+        "\n",
+        "def try_load_normalization_stats(env, model_path, norm_stats_path=None, enable=True):\n",
+        "    if not enable:\n",
+        "        return\n",
+        "    path = None\n",
+        "    if norm_stats_path is not None:\n",
+        "        path = _PathAlias(norm_stats_path)\n",
+        "    else:\n",
+        "        cand = _PathAlias(model_path).with_name(_PathAlias(model_path).stem + '_normalization_stats.json')\n",
+        "        if cand.exists():\n",
+        "            path = cand\n",
+        "    if path is None or not _PathAlias(path).exists():\n",
+        "        return\n",
+        "    try:\n",
+        "        saved = json.loads(_PathAlias(path).read_text())\n",
+        "        mean = np.array(saved['mean'], dtype=np.float32)\n",
+        "        m2 = np.array(saved['m2'], dtype=np.float32)\n",
+        "        count = int(saved['count'])\n",
+        "        cur = env\n",
+        "        target = None\n",
+        "        while cur is not None:\n",
+        "            if isinstance(cur, ObservationNormalizationWrapper):\n",
+        "                target = cur\n",
+        "                break\n",
+        "            cur = getattr(cur, 'env', None)\n",
+        "        if target is not None:\n",
+        "            target.set_normalization_stats(mean, m2, count)\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "\n",
         "# Build environment and wrappers\n",
         "env_base = GeneralMicrobiomeEnv(str(MODEL_JSON), cfg)\n",
         "env_wrapped = apply_observation_pipeline(env_base, cfg.observations.pipeline)\n",
         "\n",
-        "# Load model (optional)\n",
+        "# Load model (optional) and normalization stats\n",
         "model = None\n",
         "if not USE_RANDOM_ACTIONS:\n",
         "    model = PPO.load(str(POLICY_PATH), device='auto')\n",
-        "    \n",
+        "    try_load_normalization_stats(env_wrapped, POLICY_PATH, NORM_STATS_PATH, enable=True)\n",
+        "\n",
         "\n"
       ]
     },
