--- a/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
+++ b/content/DanielGarza/notebooks/controller_simulation_demo.ipynb
@@ -111,8 +111,8 @@
         "CONFIG_PATH = SRC_PATH / 'rl' / 'examples' / 'configs' / 'butyrate_control.yaml'\n",
         "# Provide a model path only if you set USE_RANDOM_ACTIONS=False\n",
         "POLICY_PATH = SRC_PATH / 'rl' / 'examples' / 'models' / 'example_policy.zip'\n",
-        "# Optional: path to observation normalization stats JSON. If None, auto-detect next to POLICY_PATH.\n",
-        "NORM_STATS_PATH = None  # e.g., DG_ROOT / 'trained_models' / 'mg_rl_general_ppo' / 'butyrate' / 'ppo' / '1_ckpt_2320000_normalization_stats.json'\n",
+        "# REQUIRED when USE_RANDOM_ACTIONS=False: path to observation normalization stats JSON\n",
+        "NORM_STATS_PATH = None  # set a Path, e.g., DG_ROOT / 'trained_models' / 'mg_rl_general_ppo' / 'butyrate' / 'ppo' / '1_ckpt_2320000_normalization_stats.json'\n",
         "HOURS = 500.0\n",
         "DET = True\n",
         "SEED = 666\n",
@@ -132,37 +132,27 @@
         "except Exception:\n",
         "    pass\n",
         "\n",
-        "# Helper: try to load observation normalization stats into wrappers\n",
-        "from pathlib import Path as _PathAlias\n",
-        "\n",
-        "def try_load_normalization_stats(env, model_path, norm_stats_path=None, enable=True):\n",
-        "    if not enable:\n",
-        "        return\n",
-        "    path = None\n",
-        "    if norm_stats_path is not None:\n",
-        "        path = _PathAlias(norm_stats_path)\n",
-        "    else:\n",
-        "        cand = _PathAlias(model_path).with_name(_PathAlias(model_path).stem + '_normalization_stats.json')\n",
-        "        if cand.exists():\n",
-        "            path = cand\n",
-        "    if path is None or not _PathAlias(path).exists():\n",
-        "        return\n",
-        "    try:\n",
-        "        saved = json.loads(_PathAlias(path).read_text())\n",
-        "        mean = np.array(saved['mean'], dtype=np.float32)\n",
-        "        m2 = np.array(saved['m2'], dtype=np.float32)\n",
-        "        count = int(saved['count'])\n",
-        "        cur = env\n",
-        "        target = None\n",
-        "        while cur is not None:\n",
-        "            if isinstance(cur, ObservationNormalizationWrapper):\n",
-        "                target = cur\n",
-        "                break\n",
-        "            cur = getattr(cur, 'env', None)\n",
-        "        if target is not None:\n",
-        "            target.set_normalization_stats(mean, m2, count)\n",
-        "    except Exception:\n",
-        "        pass\n",
+        "# Helper: load observation normalization stats into wrapper (no auto-detection)\n",
+        "def load_normalization_stats(env, norm_stats_path):\n",
+        "    if norm_stats_path is None:\n",
+        "        raise ValueError('NORM_STATS_PATH must be set when USE_RANDOM_ACTIONS=False')\n",
+        "    path = Path(norm_stats_path)\n",
+        "    if not path.exists():\n",
+        "        raise FileNotFoundError(f'Normalization stats file not found: {path}')\n",
+        "    saved = json.loads(path.read_text())\n",
+        "    mean = np.array(saved['mean'], dtype=np.float32)\n",
+        "    m2 = np.array(saved['m2'], dtype=np.float32)\n",
+        "    count = int(saved['count'])\n",
+        "    cur = env\n",
+        "    target = None\n",
+        "    while cur is not None:\n",
+        "        if isinstance(cur, ObservationNormalizationWrapper):\n",
+        "            target = cur\n",
+        "            break\n",
+        "        cur = getattr(cur, 'env', None)\n",
+        "    if target is None:\n",
+        "        raise RuntimeError('ObservationNormalizationWrapper not found in environment wrappers; ensure cfg.observations.pipeline includes normalization.')\n",
+        "    target.set_normalization_stats(mean, m2, count)\n",
         "\n",
         "# Build environment and wrappers\n",
         "env_base = GeneralMicrobiomeEnv(str(MODEL_JSON), cfg)\n",
@@ -172,7 +162,7 @@
         "model = None\n",
         "if not USE_RANDOM_ACTIONS:\n",
         "    model = PPO.load(str(POLICY_PATH), device='auto')\n",
-        "    try_load_normalization_stats(env_wrapped, POLICY_PATH, NORM_STATS_PATH, enable=True)\n",
+        "    load_normalization_stats(env_wrapped, NORM_STATS_PATH)\n",
         "\n",
         "\n"
       ]
