--- a/content/DanielGarza/notebooks/kinetic_model.ipynb
+++ b/content/DanielGarza/notebooks/kinetic_model.ipynb
@@ -558,7 +558,9 @@
    "cell_type": "markdown",
    "id": "0cf5b336",
    "metadata": {},
-   "source": []
+   "source": [
+    "The `Reactor` object is where microbial growth is simulated. It contains a `metabolome`, a `microbiome`, and a sequence of control pulses that define `pH`, `temperature`, `stirring`, and both continuous and non-continuous `feeding`."
+   ]
   },
   {
    "cell_type": "code",
@@ -566,7 +568,14 @@
    "id": "5775ac67",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reactor = Reactor(\n",
+    "        microbiome=microbiome,\n",
+    "        metabolome=metabolome,\n",
+    "        pulses=[pulse],\n",
+    "        volume=15.0,\n",
+    "    )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -580,7 +589,9 @@
    "cell_type": "markdown",
    "id": "36a97e8a",
    "metadata": {},
-   "source": []
+   "source": [
+    "We can now simulate the reactor and plot the results."
+   ]
   },
   {
    "cell_type": "code",
@@ -588,7 +599,11 @@
    "id": "f647c899",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reactor.set_fast_mode()\n",
+    "reactor.simulate()\n",
+    "reactor.make_plots()"
+   ]
   },
   {
    "cell_type": "markdown",
