--- a/content/DanielGarza/notebooks/kinetic_model.ipynb
+++ b/content/DanielGarza/notebooks/kinetic_model.ipynb
@@ -397,9 +397,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from kinetic_model import Bacteria, Microbiome\n",
+    "from kinetic_model import Bacteria, Microbiome, evaluate_transition_condition\n",
     "\n",
     "# Create bacteria with conditional transitions based on resource availability\n",
+    "\n",
+    "cond1 = evaluate_transition_condition('glucose <1 and acetate > 1', metabolome)\n",
+    "cond2  = evaluate_transition_condition('glucose > 1 and acetate < 1', metabolome)\n",
     "\n",
     "ecoli = Bacteria(\n",
     "    species=\"E. coli\",\n",
@@ -409,8 +412,8 @@
     "        \"inactive\": subpop_3\n",
     "        },\n",
     "    connections={\n",
-    "        \"glucose_consumer\": [[\"acetate_consumer\", \"glucose <1 and acetate > 1\", 0.001], [\"inactive\", \"\", 0.00001]],\n",
-    "        \"acetate_consumer\": [[\"glucose_consumer\", \"glucose > 1 and acetate < 1\", 0.01], [\"inactive\", \"\", 0.0000001]],\n",
+    "        \"glucose_consumer\": [[\"acetate_consumer\", cond1, 0.001], [\"inactive\", \"\", 0.00001]],\n",
+    "        \"acetate_consumer\": [[\"glucose_consumer\", cond2, 0.01], [\"inactive\", \"\", 0.0000001]],\n",
     "        }\n",
     "    )\n",
     "\n",
@@ -534,6 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from kinetic_model import Pulse\n",
     "pulse = Pulse(\n",
     "        t_start=0.0,\n",
     "        t_end=120.0,   # 120 hours\n",
@@ -569,6 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from kinetic_model import Reactor\n",
     "reactor = Reactor(\n",
     "        microbiome=microbiome,\n",
     "        metabolome=metabolome,\n",
@@ -600,16 +605,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reactor.set_fast_mode()\n",
+    "reactor.set_fast_simulation_mode()\n",
     "reactor.simulate()\n",
-    "reactor.make_plots()"
+    "reactor.make_plot()"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "caf3cf4a",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### **Example gut synthetic community**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74315fc5",
+   "metadata": {},
+   "source": [
+    "We can also load the entire model at once from a JSON file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ef11c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kinetic_model import ModelFromJson\n",
+    "\n",
+    "model = ModelFromJson(\"/content/mg_backend/backend/examples/bh_bt_ri_complete_model_export.json\")\n",
+    "model_feed = ModelFromJson(\"/content/mg_backend/backend/examples/bh_bt_ri_complete_model_export.json\")\n",
+    "pulse = Pulse(\n",
+    "    t_start=0.0,\n",
+    "    t_end=1200.0,\n",
+    "    n_steps=1000,\n",
+    "    qin=0.039*15, #continous feed\n",
+    "    qout=0.039*15,#continous feed\n",
+    "    vin=0.0,#non-continuos feed\n",
+    "    vout=0.0,#non-continuos feed\n",
+    "    environment=model.environment,\n",
+    "    continuous_feed_metabolome = model_feed.metabolome,\n",
+    "    )\n",
+    "\n",
+    "reactor = Reactor(\n",
+    "    microbiome=model.microbiome,\n",
+    "    metabolome=model.metabolome,\n",
+    "    pulses=[pulse],\n",
+    "    volume=15.0,\n",
+    "    )\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efab43c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build the graph specification\n",
+    "builder = GraphSpecBuilder()\n",
+    "graph_spec = builder.build_from_json(model)\n",
+    "\n",
+    "# Export to Cytoscape\n",
+    "exporter = CytoscapeExporter()\n",
+    "cytoscape_data = exporter.export(graph_spec, layout=\"nice\", show_edge_labels=True)\n",
+    "\n",
+    "# Create the viewer\n",
+    "viewer = CytoscapeWidget()\n",
+    "viewer.graph.add_graph_from_json(cytoscape_data['elements'])\n",
+    "viewer.set_style(cytoscape_data['style'])  # Use 'style' instead of 'stylesheet'\n",
+    "viewer.set_layout(name=\"preset\")\n",
+    "\n",
+    "# Display\n",
+    "display(viewer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "791ed5ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactor.set_fast_simulation_mode()\n",
+    "reactor.simulate()\n",
+    "reactor.make_plot()"
+   ]
   }
  ],
  "metadata": {
