--- a/content/DanielGarza/notebooks/kinetic_model.ipynb
+++ b/content/DanielGarza/notebooks/kinetic_model.ipynb
@@ -635,8 +635,10 @@
    "source": [
     "from kinetic_model import ModelFromJson\n",
     "\n",
-    "model = ModelFromJson(\"/content/mg_backend/backend/examples/bh_bt_ri_complete_model_export.json\")\n",
-    "model_feed = ModelFromJson(\"/content/mg_backend/backend/examples/bh_bt_ri_complete_model_export.json\")\n",
+    "\n",
+    "json_file = \"/shared/home/tp182674/AiSchool/content/DanielGarza/modelTemplates/bh_bt_ri_complete_model_export.json\"\n",
+    "model = ModelFromJson(json_file)\n",
+    "model_feed = ModelFromJson(json_file)\n",
     "pulse = Pulse(\n",
     "    t_start=0.0,\n",
     "    t_end=1200.0,\n",
@@ -665,9 +667,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the model\n",
+    "with open(json_file, 'r') as f:\n",
+    "    mod = json.load(f)\n",
     "# Build the graph specification\n",
     "builder = GraphSpecBuilder()\n",
-    "graph_spec = builder.build_from_json(model)\n",
+    "graph_spec = builder.build_from_json(mod)\n",
     "\n",
     "# Export to Cytoscape\n",
     "exporter = CytoscapeExporter()\n",
