--- a/content/DanielGarza/notebooks/kinetic_model.ipynb
+++ b/content/DanielGarza/notebooks/kinetic_model.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/danielriosgarza/AiSchool/blob/main/content/DanielGarza/notebooks/kinetic_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "from google.colab import output\n",
@@ -1606,8 +1596,7 @@
       "version": "3.13.3"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
