--- a/content/DanielGarza/notebooks/kinetic_model.ipynb
+++ b/content/DanielGarza/notebooks/kinetic_model.ipynb
@@ -1599,6 +1599,7 @@
       "provenance": []
     },
     "widgets": {
+      "state":{},
       "application/vnd.jupyter.widget-state+json": {
         "98136374edb94bd69bcb0c101389acf4": {
           "model_module": "jupyter-cytoscape",
